--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,15 +2,15 @@ version: "3.9"
 
 services:
   db:
-    container_name: "mongo"
+    container_name: "mongo_server"
     image: "mongo"
   
-  logic:
-    container_name: "node"
+  app:
+    container_name: "node_app"
     image: "node"
 
-  server:
-    container_name: "server"
+  login:
+    container_name: "login_server"
     image: "nginx"
     ports:
     - 1234:8080
