--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,10 +4,19 @@ services:
   db:
     container_name: "mongo_server"
     image: "mongo"
+    environment:
+      - MONGO_INITDB_DATABASE=app_db
+      - MONGO_INITDB_USER=dan
+      - MONGO_INITDB_PWD=userpassword
+    volumes:
+      - ./config/mongo-init.sh:/docker-entrypoint-initdb.d/mongo-init.sh:ro
+    ports:
+    - 27017:27017
   
   app:
     container_name: "node_app"
-    image: "node"
+    build: ./rest_api
+    tty: true
 
   login:
     container_name: "login_server"
