--- a/rest_api/package.json
+++ b/rest_api/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@hapi/hapi": "^20.2.1"
+    "@hapi/hapi": "^20.2.1",
+    "mongodb": "^4.3.1"
   }
 }
